Fusionné les adresses d'envoi et les adresses normales dans le web-service Tiers v3.
git-svn-id: https://svn.etat-de-vaud.ch/SVN_SOCLE/registre/unireg/trunk@61641 cb3efa0a-b8b0-9f43-a4c8-343d8b7e4362